[package]
name = "guess-the-drop"
version = "0.1.0"
edition = "2021"

# Defining bin here to make multi stage docker build work
[[bin]]
name = "guess-the-drop"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
async-trait = "0.1.74"
axum = { version = "0.6.20", features = ["multipart"] }
dotenv = "0.15.0"
mysql = "24.0.0"
nanoid = "0.4.0"
reqwest = "0.11.22"
rmp-serde = "1.1.2"
rust-s3 = "0.33.0"
serde = { version = "1.0.191", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "mysql"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["compression-full", "cors", "fs", "timeout"] }
tower-sessions = { version = "0.4.1", features = ["mysql-store", "moka-store"] }
tracing = "0.1.40"
twitch-irc = "5.0.1"
twitch_oauth2 = { version = "0.12.7", features = ["client", "reqwest"] }

# Needed to fix docker build
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.108"
