[package]
name = "guess-the-drop"
version = "0.1.0"
edition = "2021"

# Defining bin here to make multi stage docker build work
[[bin]]
name = "guess-the-drop"
path = "src/main.rs"

[dependencies]
# Needed to fix docker build
openssl = { version = "0.10", features = ["vendored"] }

anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
async-trait = "0.1.74"
axum = { version = "0.6.20", features = ["multipart", "headers"] }
dotenv = "0.15.0"
headers = "0.3"
image = "0.24.7"
minify-html = "0.11.1"
mysql = "24.0.0"
nanoid = "0.4.0"
reqwest = "0.11.22"
rmp-serde = "1.1.2"
rust-s3 = "0.33.0"
serde = { version = "1.0.191", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "mysql"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.4", features = ["compression-full", "cors", "fs", "timeout"] }
tower-sessions = { version = "0.4.1", features = ["mysql-store", "moka-store"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twitch-irc = { version = "5.0.1", features = ["reqwest", "__refreshing-token"] }
twitch_oauth2 = { version = "0.12.7", features = ["client", "reqwest"] }
chrono = "0.4.31"
twitch_api = { version = "0.7.0-rc.7", features = ["reqwest", "helix"] }
google-cloud-pubsub = "0.21.0"
google-cloud-googleapis = { version = "0.11.1", features = ["pubsub"] }
tokio-util = "0.7.10"
lazy_static = "1.4.0"
futures-util = "0.3.29"
prost-types = "0.11.9"
futures = "0.3.29"
rand = "0.8.5"

